2005-10-21  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/dlr-mysql.conf: fixed the naming change from change set
     2005-09-21, where the 'mysql-connection' group changed to use 'username'
     and 'password' as login credentials instead of the mysql prefixes.
     Thanks to Mike Harris <mikeh@mite.net> who pointed this out.
     [Msg-Id: <200510201656.j9KGuqch027946@outmail.freedom2surf.net>]

2005-10-10  Stipe Tolj  <stolj@wapme-group.de>
   * test/test_regex.c: added output of the sub-strings matching a regular
     expression, just for the sake of readability.
     
2005-10-07  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: added modems group for Sony Ericsson T63x, 
     found at Heny Junior's blog describing the use on a MacOS X system. 
     [URL: http://henryjunior.com/blog/?p=12] 
     
2005-10-06  Stipe Tolj  <stolj@wapme-group.de>
   * gwlib/octstr.c: fixed a critical bug in octstr_split() where we would loop 
     infinetly inside the while clause cuasing octstr_search() to allocate 
     memory. If a needle has len 0, then we obviously have an exit condition 
     for the loop.
  
2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wap_push_ppg.c: possibly fixing bug #144, initializing Octstr vars
     that are destroyed afterwards in case of a failed URL compare, waiting on 
     Jonathan for feedback.
   
2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: fixing bug #255 where we pass a NULL result from 
     xmlDocGetRootElement() within parse_document() to the next functions and 
     hence causing an segfault. Thanks a lot to Mindaugas Riauba <mind@bi.lt>
     for the bug report and the fix suggestion.
     [Msg-Id: <01ad01c5c807$8bca3ba0$f20214ac@bite.lt>]

2005-10-04  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: commenting 'no-smsc' value for Falcom GSM modems,
     this breaks the PDU string acceptance as far as we tested. Should be 'false'
     for the Falcom modem type.
