@@ -86,6 +86,9 @@
 
 /***********************************************************************
  * Declarations of data types. 
+ * 
+ * Binary code values are defined by OMNA, see 
+ * http://www.openmobilealliance.org/tech/omna/omna-wbxml-public-docid.htm
  */
 
 struct wml_externalid_t {
@@ -96,10 +99,25 @@ struct wml_externalid_t {
 typedef struct wml_externalid_t wml_externalid_t;
 
 static wml_externalid_t wml_externalid[] = {
-    { "-//WAPFORUM//DTD WML 1.3//EN", 0x0A },
-    { "-//WAPFORUM//DTD WML 1.2//EN", 0x09 },
-    { "-//WAPFORUM//DTD WML 1.1//EN", 0x04 },
-    { "-//WAPFORUM//DTD WML 1.0//EN", 0x02 }
+    { "-//WAPFORUM//DTD WML 1.0//EN", 0x02 },           /* WML 1.0 */
+    { "-//WAPFORUM//DTD WTA 1.0//EN", 0x03 },           /* DEPRECATED - WTA Event 1.0 */
+    { "-//WAPFORUM//DTD WML 1.1//EN", 0x04 },           /* WML 1.1 */
+    { "-//WAPFORUM//DTD SI 1.0//EN", 0x05 },            /* Service Indication 1.0 */
+    { "-//WAPFORUM//DTD SL 1.0//EN", 0x06 },            /* Service Loading 1.0 */
+    { "-//WAPFORUM//DTD CO 1.0//EN", 0x07 },            /* Cache Operation 1.0 */
+    { "-//WAPFORUM//DTD CHANNEL 1.1//EN", 0x08 },       /* Channel 1.1 */
+    { "-//WAPFORUM//DTD WML 1.2//EN", 0x09 },           /* WML 1.2 */
+    { "-//WAPFORUM//DTD WML 1.3//EN", 0x0A },           /* WML 1.3 */
+    { "-//WAPFORUM//DTD PROV 1.0//EN", 0x0B },          /* Provisioning 1.0 */
+    { "-//WAPFORUM//DTD WTA-WML 1.2//EN", 0x0C },       /* WTA-WML 1.2 */
+    { "-//WAPFORUM//DTD EMN 1.0//EN", 0x0D },           /* Email Notification 1.0 WAP-297 */
+    { "-//OMA//DTD DRMREL 1.0//EN", 0x0E },             /* DRM REL 1.0 */
+    { "-//WIRELESSVILLAGE//DTD CSP 1.0//EN", 0x0F },    /* Wireless Village CSP DTD v1.0 */
+    { "-//WIRELESSVILLAGE//DTD CSP 1.1//EN", 0x10 },    /* Wireless Village CSP DTD v1.1 */
+    { "-//OMA//DTD WV-CSP 1.2//EN", 0x11 },             /* OMA IMPS - CSP protocol DTD v1.2 */
+    { "-//OMA//DTD IMPS-CSP 1.3//EN", 0x12 }            /* This document type is used to carry OMA 
+                                                         * IMPS 1.3 primitives and the information 
+                                                         * elements within. */
 };
 
 #define NUMBER_OF_WML_EXTERNALID sizeof(wml_externalid)/sizeof(wml_externalid[0])
@@ -112,9 +130,11 @@ struct wbxml_version_t {
 typedef struct wbxml_version_t wbxml_version_t;
 
 static wbxml_version_t wbxml_version[] = {
-    { "1.3", 0x03 },
-    { "1.2", 0x02 },
     { "1.1", 0x01 },
+    { "1.2", 0x02 },
+    { "1.3", 0x03 },
+    { "1.4", 0x04 },
+    { "1.5", 0x05 }
 };
 
 #define NUMBER_OF_WBXML_VERSION sizeof(wbxml_version)/sizeof(wbxml_version[0])
